--- a/css/start-page-main.css
+++ b/css/start-page-main.css
@@ -38,7 +38,7 @@
 
 body { 
     /*background-color: var(--color-background);*/
-    background-image: url('../img/night-city-wp.jpg');
+    background-image: url('../img/MoonlitAsteroid.png');
     background-size: cover;
     font-family: 'Arial', sans-serif; font-size: 10pt; 
     background-color: #1f1f1f;
