--- a/css/main.css
+++ b/css/main.css
@@ -246,8 +246,7 @@ li {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.linkBox {
-    draggable: true;
+.linkBox, .RSSBox {
     background-color: var(--color-linkbox-body);
     position: relative;
     /*flex-basis: calc(30% - 10px);*/
