--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,8 @@ h2 {
 
 h3 {
     color: var(--color-text);
-    margin-top: 8px; margin-right: 10px; margin-bottom: 8px; margin-left: 10px;
-    font-family: Tahoma, Geneva, sans-serif; font-size:16px; text-align: center;
+    margin-top: 6px; margin-right: 10px; margin-bottom: 6px; margin-left: 10px;
+    font-family: Tahoma, Geneva, sans-serif; font-size:14px; text-align: center;
 }
 
 p {
@@ -180,12 +180,31 @@ li {
     margin-top: 8px; margin-right: 8px;
 }
 
-/*Search tool css */
+/* Search box css */
 
-#search {
-    padding-left:16px; padding-bottom:8px; padding-top:8px;
-    height:24px;
-    font-size:18px;
+.searchBox {
+    background-color: var(--color-linkbox-body);
+    position: relative;
+    /*flex-basis: calc(30% - 10px);*/
+    margin-top: 12px; margin-right: 20px; margin-bottom: 12px; margin-left: 20px;
+    border: 1px solid;
+    box-sizing: border-box;
+    width: 300px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.searchBox-container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.searchBox .content {
+    position: relative;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
 }
 
 #searchInput {
@@ -226,13 +245,13 @@ li {
     width: 300px;
     height: 150px;
 }
-
+/*
 .toolBox::before {
     content: '';
     display: block;
     padding-top: 100%;
 }
-
+*/
 .toolBox .content {
     position: absolute;
     top: 0; left: 0;
@@ -262,8 +281,6 @@ li {
 .linkBox .content {
     position: relative;
     top: 0; left: 0;
-  /*  position: absolute;
-    top: 0; left: 0; */
     height: 100%;
     width: 100%;
 }
@@ -321,4 +338,4 @@ li {
 	margin-top:12px;
     font-family: 'Times', sans-serif; font-size: 12px;
 	color: #ffffff;
-}  
+}
